# 3-python-package-zebrazooka

./: MANIFEST.in  Pipfile  README.md  demo.py  pyproject.toml
.github/workflows/: build.yaml
artificial_unintelligence/: __init__.py  __main__.py  function_3.py  functions.py  test_func_3.py  word_bank.json
tests/: test_func_3.py  test_functions.py  test_keyboard_smash.py
